apps/objects/cilium-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bhyoo-gateway
  namespace: ingress-ctrl
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-acme
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium.nodeipam/match-node-labels: "homelab.bhyoo.com/cilium-envoy=true"
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.bhyoo.com"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: wildcard-bhyoo-com-tls
      allowedRoutes:
        namespaces:
          from: All
